!1007 fix(#I37XAM): resolve can not collapse dropdown on Table toolbar * fix: 修复 table 组件工具栏中下拉框组件无法收缩问题 * style: 更新 Table 组件 Column 列样式 * chore: 更新依赖组件

--- a/src/BootstrapBlazor/Components/Table/Table.razor.cs.css
+++ b/src/BootstrapBlazor/Components/Table/Table.razor.cs.css
@@ -343,7 +343,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-        margin-right:6px;
+        margin-right: 6px;
     }
 
     .table-row.table-footer {
@@ -470,3 +470,11 @@
 .table-resize .border-resize {
     border-right: 1px solid #409eff;
 }
+
+.table-container .table-toolbar .btn-col .dropdown-item {
+    padding: .25rem 0;
+}
+
+    .table-container .table-toolbar .btn-col .dropdown-item .form-checkbox {
+        display: block;
+    }
